--- a/adsbuttons.css
+++ b/adsbuttons.css
@@ -13,7 +13,7 @@
     }
 
     .modal-content {
-        background-color: #fefefe;
+        background-color: black;
         margin: 15% auto;
         padding: 20px;
         border: 1px solid #888;
