--- a/playerCss.css
+++ b/playerCss.css
@@ -1491,3 +1491,20 @@
         .plyr [hidden] {
             display: none !important
         }
+
+
+.chromecast-button {
+    position: absolute;
+    top: 10px;
+    left: 10px;
+    background-color: rgba(0, 0, 0, 0.5);
+    color: white;
+    border: none;
+    padding: 5px;
+    font-size: 16px;
+    cursor: pointer;
+}
+
+.chromecast-button i {
+    font-style: normal;
+}
